--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.4.2
 Flask-WTF==0.12
+gunicorn==19.4.1
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.3
