--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bcrypt==2.0.0
 cffi==1.3.1
 Flask==0.10.1
 Flask-Bcrypt==0.7.1
+flask-heroku==0.1.9
 Flask-Login==0.3.2
 Flask-Migrate==1.6.0
 Flask-Script==2.0.5
@@ -15,6 +16,7 @@ Jinja2==2.8
 Mako==1.0.3
 MarkupSafe==0.23
 MySQL-python==1.2.5
+psycopg2==2.6.1
 pycparser==2.14
 python-editor==0.5
 six==1.10.0
